@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.63 2008/03/13 19:53:37 sfeam Exp $
+ * $Id: tables.h,v 1.64 2008/05/03 22:19:21 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -223,6 +223,7 @@ extern const struct gen_table filledcurves_opts_tbl[];
 /* Function prototypes */
 int lookup_table __PROTO((const struct gen_table *, int));
 parsefuncp_t lookup_ftable __PROTO((const struct gen_ftable *, int));
+int lookup_table_entry __PROTO((const struct gen_table *tbl, const char *search_str));
 int lookup_table_nth __PROTO((const struct gen_table *tbl, const char *search_str));
 int lookup_table_nth_reverse __PROTO((const struct gen_table *tbl, int table_len, const char *search_str));
 const char * reverse_table_lookup __PROTO((const struct gen_table *tbl, int entry));
